Bug Fix: trash can icon was not correctly changing colour in dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -375,7 +375,6 @@ Udemy Course 'Modern Javascript: From Novice to Ninja' - Author: Shaun Pelling *
   right: 15px;
   top: 50%;
   transform: translateY(-50%);
-  color: #353B3C;
 }
 
 #workout-list i:hover {
